# gooseherd

./: .gitignore  .goose-gates.yaml  ADAPTERS.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  RELEASE.md  SECURITY.md  goose-self-test.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new-agent.yml
.github/workflows/: build-cli.yml  cargo-deny.yml  cargo-machete.yml  ci.yml  publish-ask-ai-bot.yml  publish-docker.yml  release.yml
adapters/: README.md  gemini.yaml  glm.yaml  kimi.yaml  opencode.yaml  vibe.yaml
crates/goose/: Cargo.toml
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs  lib.rs  worktree.rs
crates/goose-cli/src/commands/: adapters.rs  configure.rs  doctor.rs  herd.rs  mod.rs  recipe.rs  session.rs  worktree.rs
crates/goose-cli/src/scenario_tests/: provider_configs.rs  (+2 more)
crates/goose-mcp/: Cargo.toml
crates/goose-mcp/src/: lib.rs  mcp_server_runner.rs
crates/goose-provider-types/src/: base.rs
crates/goose-providers/: Cargo.toml
crates/goose-providers/src/: declarative.rs  lib.rs
crates/goose-sdk/: Cargo.toml
crates/goose-sdk-types/src/: custom_requests.rs
crates/goose-test-support/: Cargo.toml
crates/goose/src/: elicitation.rs  lib.rs  logging.rs  utils.rs
crates/goose/tests/: agent.rs  providers.rs
docs/: loops.md  overhaul-2026-07.md  parity.md  reference.md  ultracode-method.md  writing-orch-tasks.md
docs/upstream-watch/: 2026-W29.md  2026-W30.md
documentation/docs/: terminal-setup-iterm2.md
profiles/: fable5-playbook.md
scripts/: install.sh
(+78 files in other folders)
