[package]
name = "goose-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

# TLS feature keys are retained (empty) so goose-cli's `goose-mcp/{rustls-tls,native-tls}`
# feature passthroughs still resolve; the memory-only crate no longer uses reqwest.
[features]
default = []
rustls-tls = []
native-tls = []

[dependencies]
rmcp = { workspace = true, features = ["server", "client", "transport-io", "macros"] }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
indoc = { workspace = true }
etcetera = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }
